# Hardware-Store-AI-Assistant

./: .gitignore  README.md  makefile  test_embedding.py
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
backend/: .env.example  Dockerfile  SECURITY.md  pyproject.toml  test_security.py
backend/app/: main.py
backend/app/middleware/: logging_middleware.py  security_middleware.py
backend/app/routers/: cache_router.py  chat.py  health.py  inventory.py  notifications.py  recommend.py  recommendations.py  reindex_router.py  search.py  security.py
backend/app/services/: embeddings.py  notification_service.py  openai_service.py  postgres.py  qdrant.py  qdrant_indexer.py  reindex_service.py
backend/app/utils/: auth.py  db.py  logger.py  metrics.py  redis_client.py  security.py
data/initdb/: 00_create_tables.sql  01_load_data.sql  customers.csv  images.csv  invoices.csv  products.csv  representative_images.csv
docs/: ROADMAP.md  esquema.txt
infra/: docker-compose.yml
infra/config/: ngrok.yml
infra/data/n8n/: config
n8n/: .env.example  MODULE_SUMMARY.md  README.md  import-workflows.sh
n8n/workflows/: chat-assistant-webhook.json  hardware-search-webhook.json  inventory-alerts.json  inventory_alerts.json  product-details-webhook.json  product-recommendations.json  product.json  recommend.json  search.json  telegram.json  whatsapp-notifications.json  whatsapp.json
scripts/: demo.py  quick-start.sh
